DO NOT SUBMIT CREL prototype
The header indicates the offset shift value.
Each relocation entry uses the 3 least significant bits to indicate
whether to encode addend/type/symidx.

* Define SHT_CREL and DT_CREL
* clang
  + -Wa,--crel: generate SHT_CREL instead of SHT_REL/SHT_RELA
  + -flto -Wa,--crel: pass -plugin-opt=-crel to generate SHT_CREL for relocatable file generation
  + -Xclang --compress-relocations={none,zlib,zstd}: compress
    SHT_REL/SHT_RELA/SHT_CREL
  + -Wa,--implicit-addends-for-data
* ld.lld
  + handle SHT_CREL input sections. Convert CREL to RELA for
    relocation scanning
  + -z crel: replace .rel[a].dyn/.rel[a].plt with .crel.dyn/.crel.plt. Can be used with -z rela to use in-relocation addends.
    Can be used together with --pack-dyn-relocs=relr
  + -r and --emit-relocs: copy SHT_CREL and rewrite (OutputSection::finalizeNonAllocCrel). supports mixing CREL/RELA
* llvm-readelf
  + -S: recognize SHT_CREL
  + -d: recognize DT_CREL. allow dyn[DT_PLTREL]==DT_CREL
  + -r: dump SHT_CREL sections
  + --dyn-relocations: dump DT_CREL table
* llvm-objcopy
  + handle RelocationSection
* llvm-objdump
  + -r
  + -dr
* yaml2obj/obj2yaml
* MCTargetOptions
  + llvm-mc -crel
  + llc -crel
  + ld.lld -mllvm -crel for LTO

--- a/lld/docs/ld.lld.1
+++ b/lld/docs/ld.lld.1
@@ -825,6 +825,12 @@ Disable combining and sorting multiple relocation sections.
 .It Cm nocopyreloc
 Disable the creation of copy relocations.
 .Pp
+.It Cm crel
+Produce CREL dynamic relocations in
+.Li .crel.dyn
+section. When -z now is specified, produce JUMP_SLOT relocations in
+.Li .crel.plt
+.Pp
 .It Cm nodefaultlib
 Set the
 .Dv DF_1_NODEFLIB
@@ -888,6 +894,9 @@ Use REL format for dynamic relocations.
 .Pp
 .It Cm rela
 Use RELA format for dynamic relocations.
+.Pp
+.It Cm relr
+Use CREL format for dynamic relocations.
 .Pp
 .It Cm retpolineplt
 Emit retpoline format PLT entries as a mitigation for CVE-2017-5715.
